Adiciona estilo aos produtos do exercício 01

--- a/exercicios/exercicio01/acme/assets/estilo.css
+++ b/exercicios/exercicio01/acme/assets/estilo.css
@@ -8,5 +8,7 @@ section {
 }
 
 article {
-    flex: 0 1 calc(25% - 1em);
+    flex: 1 0 500px;
+    box-sizing: border-box;
+    margin: 1rem .25em;
 }
